clang/test/BSC/Negative/NullabilityCheck/if_stmt_struct.cbs
// RUN: %clang_cc1 -verify %s

struct S {
    int *_Borrow _Nullable p;
};

_Safe void test1(void) {
    struct S s = { .p = nullptr };
    if (s.p != nullptr) {
        *s.p = 10;
    } else {
        *s.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test2(void) {
    int a = 10;
    struct S s = { .p = nullptr };
    if (s.p != nullptr) {
        *s.p = 10;
    } else {
        s.p = &_Mut a;
    }
    *s.p = 30;
}

_Safe void test3(void) {
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p != nullptr && s2.p != nullptr) {
        *s1.p = 10;
        *s2.p = 10;
    } else {
        *s1.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s1.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *s2.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test4(void) {
    int a = 10;
    int b = 10;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p != nullptr && s2.p != nullptr) {
        *s1.p = 10;
        *s2.p = 10;
    } else {
        s1.p = &_Mut a;
        s2.p = &_Mut b;
    }
    *s1.p = 30;
    *s2.p = 30;
}

_Safe void test5(void) {
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p != nullptr || s2.p != nullptr) {
        *s1.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *s1.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s1.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *s2.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test6(void) {
    int a = 10;
    int b = 10;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p != nullptr) {
        *s1.p = 10;
        if (s2.p != nullptr)
          *s2.p = 10;
        else
          s2.p = &_Mut b;
    } else {
        s1.p = &_Mut a;
        if (s2.p != nullptr)
          *s2.p = 10;
        else
          s2.p = &_Mut b;
    }
    *s1.p = 30;
    *s2.p = 30;
}

_Safe void test7(void) {
    int a = 10;
    int b = 10;
    int c = 10;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    struct S s3 = { .p = nullptr };
    if (s1.p != nullptr && s2.p != nullptr && s3.p != nullptr) {
        *s1.p = 10;
        *s2.p = 10;
        *s3.p = 10;
    } else {
        s1.p = &_Mut a;
        s2.p = &_Mut b;
        s3.p = &_Mut c;
    }
    *s1.p = 30;
    *s2.p = 30;
    *s3.p = 30;
}

_Safe void test8(void) {
    int a = 10;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    struct S s3 = { .p = nullptr };
    if (s1.p != nullptr && s2.p != nullptr && s3.p != nullptr) {
        *s1.p = 10;
        *s2.p = 10;
        *s3.p = 10;
    } else {
        *s1.p = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s3.p = 20;  // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s1.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *s2.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *s3.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test9(void) {
    int a = 10;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    struct S s3 = { .p = nullptr };
    if (s1.p != nullptr || s2.p != nullptr || s3.p != nullptr) {
        *s1.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s3.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *s1.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s3.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s1.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *s2.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
    *s3.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test10(void) {
    int a = 0;
    struct S s = { .p = nullptr };
    if (s.p != nullptr) {
        *s.p = 10;
        s.p = nullptr;
    } else {
        s.p = &_Mut a;
    }
    *s.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test11(void) {
    int a = 0;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p != nullptr && s2.p != nullptr || a > 0) {
        *s1.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 10;  // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *s1.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s1.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *s2.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test12(void) {
    int a = 0;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p != nullptr && s2.p != nullptr && a > 0) {
        *s1.p = 10;
        *s2.p = 10;
    } else {
        *s1.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s1.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *s2.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test13(void) {
    int a = 10;
    int b = 10;
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p != nullptr && s2.p != nullptr && a > 0) {
        *s1.p = 10;
        *s2.p = 10;
    } else {
        s1.p = &_Mut a;
        s2.p = &_Mut b;
    }
    *s1.p = 30;
    *s2.p = 30;
}

_Safe void test14(void) {
    struct S s = { .p = nullptr };
    if (s.p) {
        *s.p = 10;
    } else {
        *s.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test15(void) {
    struct S s = { .p = nullptr };
    if (!s.p) {
        *s.p = 10; // expected-error {{nullable pointer cannot be dereferenced}}
    } else {
        *s.p = 20;
    }
    *s.p = 30;  // expected-error {{nullable pointer cannot be dereferenced}}
}

_Safe void test16(void) {
    struct S s1 = { .p = nullptr };
    struct S s2 = { .p = nullptr };
    if (s1.p && s2.p) {
        *s1.p = 10;
        *s2.p = 10;
    } else {
        *s1.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
        *s2.p = 20; // expected-error {{nullable pointer cannot be dereferenced}}
    }
    *s1.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
    *s2.p = 30; // expected-error {{nullable pointer cannot be dereferenced}}
}

struct S1 {
    int *owned _Nullable p;
};

_Safe T *owned safe_malloc<T>(T t);
_Safe void safe_free(void *owned p);

_Safe void test17(void) {
    struct S1 s = { nullptr };
    struct S1 *owned _Nullable p = nullptr;
    int cond = 1;
    if (cond) {
        p = safe_malloc<struct S1>(s);
    }
    if (p != nullptr) {
        if (p->p != nullptr) {
            *p->p = 10;
            safe_free((void *owned)p->p);
        }
    }
} // expected-error {{memory leak of value: `p`}}
  // expected-error@-1 {{field memory leak of value: `p`, p.p is leak}}
